# contactsManageSys

./: CMakeLists.txt  main.cpp  readme.md
.github/workflows/: cmake-single-platform.yml  cpp-ci-with-google-test.yml
header/: clear.h  contact.h  do.h  isPhone.h  menu.h  save.h  structure.h
source/: clear.cpp  contact.cpp  do.cpp  isPhone.cpp  menu.cpp  save.cpp
test/: CMakeLists.txt  contactsTest.cpp  saveTest.cpp  test.cpp
